@@ -19,15 +19,12 @@ package io.dockstore.client.cli;
 import java.io.File;
 import java.io.IOException;
 import java.util.List;
-import java.util.stream.Collectors;
 import java.util.zip.ZipEntry;
 import java.util.zip.ZipFile;
 
 import io.dockstore.client.cli.nested.ToolClient;
-import io.dockstore.common.CommonTestUtilities;
+import io.dockstore.common.CLICommonTestUtilities;
 import io.dockstore.common.ConfidentialTest;
-import io.dockstore.common.FlushingSystemErrRule;
-import io.dockstore.common.FlushingSystemOutRule;
 import io.dockstore.common.Registry;
 import io.dockstore.common.ToilCompatibleTest;
 import io.dockstore.common.ToolTest;
@@ -38,57 +35,76 @@ import io.swagger.client.api.ContainersApi;
 import io.swagger.client.model.DockstoreTool;
 import io.swagger.client.model.PublishRequest;
 import io.swagger.client.model.Tag;
-import org.junit.Assert;
-import org.junit.Before;
-import org.junit.Ignore;
-import org.junit.Rule;
-import org.junit.Test;
-import org.junit.contrib.java.lang.system.ExpectedSystemExit;
-import org.junit.contrib.java.lang.system.SystemErrRule;
-import org.junit.contrib.java.lang.system.SystemOutRule;
 import org.junit.experimental.categories.Category;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Disabled;
+import org.junit.jupiter.api.Test;
+import uk.org.webcompere.systemstubs.jupiter.SystemStub;
+import uk.org.webcompere.systemstubs.stream.SystemErr;
+import uk.org.webcompere.systemstubs.stream.SystemOut;
 
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertFalse;
-import static org.junit.Assert.assertTrue;
+import static io.dockstore.client.cli.ArgumentUtility.CONVERT;
+import static io.dockstore.client.cli.ArgumentUtility.DOWNLOAD;
+import static io.dockstore.client.cli.ArgumentUtility.LAUNCH;
+import static io.dockstore.client.cli.CheckerClient.ADD;
+import static io.dockstore.client.cli.CheckerClient.UPDATE;
+import static io.dockstore.client.cli.Client.CONFIG;
+import static io.dockstore.client.cli.Client.SCRIPT_FLAG;
+import static io.dockstore.client.cli.Client.TOOL;
+import static io.dockstore.client.cli.Client.UPGRADE;
+import static io.dockstore.client.cli.nested.AbstractEntryClient.CWL_2_JSON;
+import static io.dockstore.client.cli.nested.AbstractEntryClient.CWL_2_YAML;
+import static io.dockstore.client.cli.nested.AbstractEntryClient.ENTRY_2_JSON;
+import static io.dockstore.client.cli.nested.AbstractEntryClient.LABEL;
+import static io.dockstore.client.cli.nested.AbstractEntryClient.MANUAL_PUBLISH;
+import static io.dockstore.client.cli.nested.AbstractEntryClient.PUBLISH;
+import static io.dockstore.client.cli.nested.AbstractEntryClient.REFRESH;
+import static io.dockstore.client.cli.nested.AbstractEntryClient.WDL_2_JSON;
+import static io.dockstore.client.cli.nested.ToolClient.VERSION_TAG;
+import static io.dockstore.client.cli.nested.WesCommandParser.ENTRY;
+import static io.dockstore.client.cli.nested.WesCommandParser.JSON;
+import static io.dockstore.common.DescriptorLanguage.CWL;
+import static io.dockstore.common.DescriptorLanguage.WDL;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertFalse;
+import static org.junit.jupiter.api.Assertions.assertTrue;
+import static uk.org.webcompere.systemstubs.SystemStubs.catchSystemExit;
 
 /**
  * Extra confidential integration tests, don't rely on the type of repository used (Github, Dockerhub, Quay.io, Bitbucket)
  *
  * @author aduncan
  */
-@Category({ ConfidentialTest.class, ToolTest.class })
-public class GeneralIT extends BaseIT {
+@org.junit.jupiter.api.Tag(ConfidentialTest.NAME)
+@org.junit.jupiter.api.Tag(ToolTest.NAME)
+class GeneralIT extends BaseIT {
 
-    @Rule
-    public final SystemOutRule systemOutRule = new FlushingSystemOutRule().enableLog().muteForSuccessfulTests();
+    @SystemStub
+    public final SystemOut systemOutRule = new SystemOut();
 
-    @Rule
-    public final SystemErrRule systemErrRule = new FlushingSystemErrRule().enableLog().muteForSuccessfulTests();
+    @SystemStub
+    public final SystemErr systemErrRule = new SystemErr();
 
-    @Rule
-    public final ExpectedSystemExit systemExit = ExpectedSystemExit.none();
-
-    @Before
+    @BeforeEach
     @Override
     public void resetDBBetweenTests() throws Exception {
-        CommonTestUtilities.cleanStatePrivate2(SUPPORT, false, testingPostgres);
+        CLICommonTestUtilities.cleanStatePrivate2(SUPPORT, false, testingPostgres);
     }
 
     /**
      * Checks that auto upgrade works and that the dockstore CLI is updated to the latest tag
      * Must be run after class since upgrading before tests may cause them to fail
      */
-    @Ignore
+    @Disabled("seems to have been disabled for ages")
     public static void testAutoUpgrade() {
         String installLocation = Client.getInstallLocation();
         String latestVersion = Client.getLatestVersion();
 
-        Client.main(new String[] { "--config", ResourceHelpers.resourceFilePath("config_file2.txt"), "--upgrade", "--script" });
+        Client.main(new String[] { CONFIG, ResourceHelpers.resourceFilePath("config_file2.txt"), UPGRADE, SCRIPT_FLAG });
         String currentVersion = Client.getCurrentVersion();
 
         if (installLocation != null && latestVersion != null && currentVersion != null) {
-            Assert.assertEquals("Dockstore CLI should now be up to date with the latest stable tag.", currentVersion, latestVersion);
+            assertEquals(currentVersion, latestVersion, "Dockstore CLI should now be up to date with the latest stable tag.");
         }
     }
 
@@ -97,161 +113,163 @@ public class GeneralIT extends BaseIT {
      */
     @Test
     @Category(ToilCompatibleTest.class)
-    public void testLocalLaunchCWL() {
-        Client.main(new String[] { "--config", ResourceHelpers.resourceFilePath("config_file2.txt"), "tool", "launch", "--local-entry",
-            ResourceHelpers.resourceFilePath("arrays.cwl"), "--json",
-            ResourceHelpers.resourceFilePath("testArrayHttpInputLocalOutput.json"), "--script" });
+    void testLocalLaunchCWL() {
+        Client.main(new String[] { CONFIG, ResourceHelpers.resourceFilePath("config_file2.txt"), TOOL, LAUNCH, "--local-entry",
+            ResourceHelpers.resourceFilePath("arrays.cwl"), JSON,
+            ResourceHelpers.resourceFilePath("testArrayHttpInputLocalOutput.json"), SCRIPT_FLAG });
     }
 
     /**
      * This tests that attempting to launch a CWL tool locally, where no file exists, an IOError will occur
      */
     @Test
-    public void testLocalLaunchCWLNoFile() {
-        systemExit.expectSystemExitWithStatus(Client.ENTRY_NOT_FOUND);
-        Client.main(new String[] { "--config", ResourceHelpers.resourceFilePath("config_file2.txt"), "tool", "launch", "--local-entry",
-            "imnotreal.cwl", "--json", "filtercount-job.json", "--script" });
+    void testLocalLaunchCWLNoFile() throws Exception {
+        int exitCode = catchSystemExit(() -> Client.main(
+                new String[] { CONFIG, ResourceHelpers.resourceFilePath("config_file2.txt"), TOOL, LAUNCH, "--local-entry",
+                        "imnotreal.cwl", JSON, "filtercount-job.json", SCRIPT_FLAG }));
+        assertEquals(Client.ENTRY_NOT_FOUND, exitCode);
     }
 
     /**
      * This tests that attempting to launch a WDL tool locally, where no file exists, an IOError will occur
      */
     @Test
-    public void testLocalLaunchWDLNoFile() {
-        systemExit.expectSystemExitWithStatus(Client.ENTRY_NOT_FOUND);
-        Client.main(new String[] { "--config", ResourceHelpers.resourceFilePath("config_file2.txt"), "tool", "launch", "--local-entry",
-            "imnotreal.wdl", "--json", "imnotreal-job.json", "--descriptor", "wdl", "--script" });
+    void testLocalLaunchWDLNoFile() throws Exception {
+        int exitCode = catchSystemExit(() -> Client.main(
+                new String[] { CONFIG, ResourceHelpers.resourceFilePath("config_file2.txt"), TOOL, LAUNCH, "--local-entry",
+                        "imnotreal.wdl", JSON, "imnotreal-job.json", "--descriptor", WDL.toString(), SCRIPT_FLAG }));
+        assertEquals(Client.ENTRY_NOT_FOUND, exitCode);
     }
 
     /**
      * This tests that attempting to launch a CWL tool remotely, where no file exists, an APIError will occur
      */
     @Test
-    public void testRemoteLaunchCWLNoFile() {
-        systemExit.expectSystemExitWithStatus(Client.IO_ERROR);
-        Client.main(
-            new String[] { "--config", ResourceHelpers.resourceFilePath("config_file2.txt"), "tool", "launch", "--entry", "imnotreal.cwl",
-                "--json", "imnotreal-job.json", "--script" });
+    void testRemoteLaunchCWLNoFile() throws Exception {
+        int exitCode = catchSystemExit(() -> Client.main(
+                new String[] { CONFIG, ResourceHelpers.resourceFilePath("config_file2.txt"), TOOL, LAUNCH, ENTRY,
+                        "imnotreal.cwl", JSON, "imnotreal-job.json", SCRIPT_FLAG }));
+        assertEquals(Client.IO_ERROR, exitCode);
     }
 
     /**
      * This tests that attempting to launch a WDL tool remotely, where no file exists, an APIError will occur
      */
     @Test
-    public void testRemoteLaunchWDLNoFile() {
-        systemExit.expectSystemExitWithStatus(Client.ENTRY_NOT_FOUND);
-        Client.main(
-            new String[] { "--config", ResourceHelpers.resourceFilePath("config_file2.txt"), "tool", "launch", "--entry", "imnotreal.wdl",
-                "--json", "imnotreal-job.json", "--descriptor", "wdl", "--script" });
+    void testRemoteLaunchWDLNoFile() throws Exception {
+        int exitCode = catchSystemExit(() ->  Client.main(
+                new String[] { CONFIG, ResourceHelpers.resourceFilePath("config_file2.txt"), TOOL, LAUNCH, ENTRY, "imnotreal.wdl",
+                        JSON, "imnotreal-job.json", "--descriptor", WDL.toString(), SCRIPT_FLAG }));
+        assertEquals(Client.ENTRY_NOT_FOUND, exitCode);
     }
 
     /**
      * Checks that you can't add/remove labels unless they all are of proper format
      */
     @Test
-    public void testLabelIncorrectInput() {
-        systemExit.expectSystemExitWithStatus(Client.CLIENT_ERROR);
-        Client.main(new String[] { "--config", ResourceHelpers.resourceFilePath("config_file2.txt"), "tool", "label", "--entry",
-            "quay.io/dockstoretestuser2/quayandgithub", "--add", "docker-hub", "--add", "quay.io", "--script" });
+    void testLabelIncorrectInput() throws Exception {
+        int exitCode = catchSystemExit(() -> Client.main(
+                new String[] { CONFIG, ResourceHelpers.resourceFilePath("config_file2.txt"), TOOL, LABEL, ENTRY,
+                        "quay.io/dockstoretestuser2/quayandgithub", "--add", "docker-hub", "--add", "quay.io", SCRIPT_FLAG }));
+        assertEquals(Client.CLIENT_ERROR, exitCode);
     }
 
     /**
      * Tests adding/editing/deleting container related labels (for search)
      */
     @Test
-    public void testAddEditRemoveLabel() {
+    void testAddEditRemoveLabel() {
         // Test adding/removing labels for different containers
-        Client.main(new String[] { "--config", ResourceHelpers.resourceFilePath("config_file2.txt"), "tool", "label", "--entry",
-            "quay.io/dockstoretestuser2/quayandgithub", "--add", "quay", "--add", "github", "--remove", "dockerhub", "--script" });
-        Client.main(new String[] { "--config", ResourceHelpers.resourceFilePath("config_file2.txt"), "tool", "label", "--entry",
-            "quay.io/dockstoretestuser2/quayandgithub", "--add", "github", "--add", "dockerhub", "--remove", "quay", "--script" });
+        Client.main(new String[] { CONFIG, ResourceHelpers.resourceFilePath("config_file2.txt"), TOOL, LABEL, ENTRY,
+            "quay.io/dockstoretestuser2/quayandgithub", "--add", "quay", "--add", "github", "--remove", "dockerhub", SCRIPT_FLAG });
+        Client.main(new String[] { CONFIG, ResourceHelpers.resourceFilePath("config_file2.txt"), TOOL, LABEL, ENTRY,
+            "quay.io/dockstoretestuser2/quayandgithub", "--add", "github", "--add", "dockerhub", "--remove", "quay", SCRIPT_FLAG });
 
-        Client.main(new String[] { "--config", ResourceHelpers.resourceFilePath("config_file2.txt"), "tool", "label", "--entry",
-            "quay.io/dockstoretestuser2/quayandgithubalternate", "--add", "alternate", "--add", "github", "--script" });
-        Client.main(new String[] { "--config", ResourceHelpers.resourceFilePath("config_file2.txt"), "tool", "label", "--entry",
-            "quay.io/dockstoretestuser2/quayandgithubalternate", "--remove", "github", "--script" });
+        Client.main(new String[] { CONFIG, ResourceHelpers.resourceFilePath("config_file2.txt"), TOOL, LABEL, ENTRY,
+            "quay.io/dockstoretestuser2/quayandgithubalternate", "--add", "alternate", "--add", "github", SCRIPT_FLAG });
+        Client.main(new String[] { CONFIG, ResourceHelpers.resourceFilePath("config_file2.txt"), TOOL, LABEL, ENTRY,
+            "quay.io/dockstoretestuser2/quayandgithubalternate", "--remove", "github", SCRIPT_FLAG });
 
         final long count = testingPostgres.runSelectStatement("select count(*) from entry_label where entryid = '2'", long.class);
-        assertEquals("there should be 2 labels for the given container, there are " + count, 2, count);
+        assertEquals(2, count, "there should be 2 labels for the given container, there are " + count);
 
         final long count2 = testingPostgres.runSelectStatement(
             "select count(*) from label where value = 'quay' or value = 'github' or value = 'dockerhub' or value = 'alternate'",
             long.class);
-        assertEquals("there should be 4 labels in the database (No Duplicates), there are " + count2, 4, count2);
+        assertEquals(4, count2, "there should be 4 labels in the database (No Duplicates), there are " + count2);
     }
 
     /**
      * Tests altering the cwl and dockerfile paths to invalid locations (quick registered)
      */
     @Test
-    public void testVersionTagWDLCWLAndDockerfilePathsAlteration() {
+    void testVersionTagWDLCWLAndDockerfilePathsAlteration() {
         Client.main(
-            new String[] { "--config", ResourceHelpers.resourceFilePath("config_file2.txt"), "tool", "version_tag", "update", "--entry",
+            new String[] { CONFIG, ResourceHelpers.resourceFilePath("config_file2.txt"), TOOL, VERSION_TAG, UPDATE, ENTRY,
                 "quay.io/dockstoretestuser2/quayandgithub", "--name", "master", "--cwl-path", "/testDir/Dockstore.cwl", "--wdl-path",
-                "/testDir/Dockstore.wdl", "--dockerfile-path", "/testDir/Dockerfile", "--script" });
+                "/testDir/Dockstore.wdl", "--dockerfile-path", "/testDir/Dockerfile", SCRIPT_FLAG });
 
         final long count = testingPostgres.runSelectStatement(
             "select count(*) from tag,tool where tool.registry = '" + Registry.QUAY_IO.getDockerPath()
                 + "' and tool.namespace = 'dockstoretestuser2' and tool.name = 'quayandgithub' and tool.toolname IS NULL and tool.id=tag.parentid and valid = 'f'",
             long.class);
-        assertEquals("there should now be an invalid tag, found " + count, 1, count);
+        assertEquals(1, count, "there should now be an invalid tag, found " + count);
 
         Client.main(
-            new String[] { "--config", ResourceHelpers.resourceFilePath("config_file2.txt"), "tool", "version_tag", "update", "--entry",
+            new String[] { CONFIG, ResourceHelpers.resourceFilePath("config_file2.txt"), TOOL, VERSION_TAG, UPDATE, ENTRY,
                 "quay.io/dockstoretestuser2/quayandgithub", "--name", "master", "--cwl-path", "/Dockstore.cwl", "--wdl-path",
-                "/Dockstore.wdl", "--dockerfile-path", "/Dockerfile", "--script" });
+                "/Dockstore.wdl", "--dockerfile-path", "/Dockerfile", SCRIPT_FLAG });
 
         final long count2 = testingPostgres.runSelectStatement(
             "select count(*) from tag,tool where tool.registry = '" + Registry.QUAY_IO.getDockerPath()
                 + "' and tool.namespace = 'dockstoretestuser2' and tool.name = 'quayandgithub' and tool.toolname IS NULL and tool.id=tag.parentid and valid = 'f'",
             long.class);
-        assertEquals("the invalid tag should now be valid, found " + count2, 0, count2);
+        assertEquals(0, count2, "the invalid tag should now be valid, found " + count2);
     }
 
     /**
      * Test trying to remove a tag for auto build
      */
     @Test
-    public void testVersionTagRemoveAutoContainer() {
-        systemExit.expectSystemExitWithStatus(Client.CLIENT_ERROR);
-        Client.main(
-            new String[] { "--config", ResourceHelpers.resourceFilePath("config_file2.txt"), "tool", "version_tag", "remove", "--entry",
-                "quay.io/dockstoretestuser2/quayandgithub", "--name", "master", "--script" });
+    void testVersionTagRemoveAutoContainer() throws Exception {
+        int exitCode = catchSystemExit(() ->  Client.main(
+                new String[] { CONFIG, ResourceHelpers.resourceFilePath("config_file2.txt"), TOOL, VERSION_TAG, "remove", ENTRY,
+                        "quay.io/dockstoretestuser2/quayandgithub", "--name", "master", SCRIPT_FLAG }));
+        assertEquals(Client.CLIENT_ERROR, exitCode);
     }
 
     /**
      * Test trying to add a tag for auto build
      */
     @Test
-    public void testVersionTagAddAutoContainer() {
-        systemExit.expectSystemExitWithStatus(Client.CLIENT_ERROR);
-        Client.main(
-            new String[] { "--config", ResourceHelpers.resourceFilePath("config_file2.txt"), "tool", "version_tag", "add", "--entry",
-                "quay.io/dockstoretestuser2/quayandgithub", "--name", "masterTest", "--image-id",
-                "4728f8f5ce1709ec8b8a5282e274e63de3c67b95f03a519191e6ea675c5d34e8", "--git-reference", "master", "--script" });
+    void testVersionTagAddAutoContainer() throws Exception {
+        int exitCode = catchSystemExit(() -> Client.main(
+                new String[] { CONFIG, ResourceHelpers.resourceFilePath("config_file2.txt"), TOOL, VERSION_TAG, ADD, ENTRY,
+                        "quay.io/dockstoretestuser2/quayandgithub", "--name", "masterTest", "--image-id",
+                        "4728f8f5ce1709ec8b8a5282e274e63de3c67b95f03a519191e6ea675c5d34e8", "--git-reference", "master", SCRIPT_FLAG }));
+        assertEquals(Client.CLIENT_ERROR, exitCode);
     }
 
     /**
      * Tests adding tags to a manually registered container
      */
     @Test
-    public void testAddVersionTagManualContainer() {
-        Client.main(new String[] { "--config", ResourceHelpers.resourceFilePath("config_file2.txt"), "tool", "manual_publish", "--registry",
+    void testAddVersionTagManualContainer() {
+        Client.main(new String[] { CONFIG, ResourceHelpers.resourceFilePath("config_file2.txt"), TOOL, MANUAL_PUBLISH, "--registry",
             Registry.QUAY_IO.name(), "--namespace", "dockstoretestuser2", "--name", "quayandgithub", "--git-url",
             "git@github.com:dockstoretestuser2/quayandgithubalternate.git", "--git-reference", "master", "--toolname", "alternate",
-            "--cwl-path", "/testDir/Dockstore.cwl", "--dockerfile-path", "/testDir/Dockerfile", "--script" });
+            "--cwl-path", "/testDir/Dockstore.cwl", "--dockerfile-path", "/testDir/Dockerfile", SCRIPT_FLAG });
 
         Client.main(
-            new String[] { "--config", ResourceHelpers.resourceFilePath("config_file2.txt"), "tool", "version_tag", "add", "--entry",
+            new String[] { CONFIG, ResourceHelpers.resourceFilePath("config_file2.txt"), TOOL, VERSION_TAG, ADD, ENTRY,
                 "quay.io/dockstoretestuser2/quayandgithub/alternate", "--name", "masterTest", "--image-id",
-                "4728f8f5ce1709ec8b8a5282e274e63de3c67b95f03a519191e6ea675c5d34e8", "--git-reference", "master", "--script" });
+                "4728f8f5ce1709ec8b8a5282e274e63de3c67b95f03a519191e6ea675c5d34e8", "--git-reference", "master", SCRIPT_FLAG });
 
         final long count = testingPostgres.runSelectStatement(
             " select count(*) from  tag, tool where tag.parentid = tool.id and giturl ='git@github.com:dockstoretestuser2/quayandgithubalternate.git' and toolname = 'alternate'",
             long.class);
-        assertEquals(
-            "there should be 3 tags, 2  that are autogenerated (master and latest) and the newly added masterTest tag, found " + count, 3,
-            count);
+        assertEquals(3, count,
+                "there should be 3 tags, 2  that are autogenerated (master and latest) and the newly added masterTest tag, found " + count);
 
     }
 
@@ -259,92 +277,93 @@ public class GeneralIT extends BaseIT {
      * Tests hiding and unhiding different versions of a container (quick registered)
      */
     @Test
-    public void testVersionTagHide() {
+    void testVersionTagHide() {
         Client.main(
-            new String[] { "--config", ResourceHelpers.resourceFilePath("config_file2.txt"), "tool", "version_tag", "update", "--entry",
-                "quay.io/dockstoretestuser2/quayandgithub", "--name", "master", "--hidden", "true", "--script" });
+            new String[] { CONFIG, ResourceHelpers.resourceFilePath("config_file2.txt"), TOOL, VERSION_TAG, UPDATE, ENTRY,
+                "quay.io/dockstoretestuser2/quayandgithub", "--name", "master", "--hidden", "true", SCRIPT_FLAG });
         final long count = testingPostgres
             .runSelectStatement("select count(*) from tag t, version_metadata vm where vm.hidden = 't' and t.id = vm.id", long.class);
-        assertEquals("there should be 1 hidden tag", 1, count);
+        assertEquals(1, count, "there should be 1 hidden tag");
 
         Client.main(
-            new String[] { "--config", ResourceHelpers.resourceFilePath("config_file2.txt"), "tool", "version_tag", "update", "--entry",
-                "quay.io/dockstoretestuser2/quayandgithub", "--name", "master", "--hidden", "false", "--script" });
+            new String[] { CONFIG, ResourceHelpers.resourceFilePath("config_file2.txt"), TOOL, VERSION_TAG, UPDATE, ENTRY,
+                "quay.io/dockstoretestuser2/quayandgithub", "--name", "master", "--hidden", "false", SCRIPT_FLAG });
         final long count2 = testingPostgres
             .runSelectStatement("select count(*) from tag t, version_metadata vm where vm.hidden = 't' and t.id = vm.id", long.class);
-        assertEquals("there should be 0 hidden tag", 0, count2);
+        assertEquals(0, count2, "there should be 0 hidden tag");
     }
 
     /**
      * Will test deleting a tag from a manually registered container
      */
     @Test
-    public void testVersionTagDelete() {
-        Client.main(new String[] { "--config", ResourceHelpers.resourceFilePath("config_file2.txt"), "tool", "manual_publish", "--registry",
+    void testVersionTagDelete() {
+        Client.main(new String[] { CONFIG, ResourceHelpers.resourceFilePath("config_file2.txt"), TOOL, MANUAL_PUBLISH, "--registry",
             Registry.QUAY_IO.name(), "--namespace", "dockstoretestuser2", "--name", "quayandgithub", "--git-url",
             "git@github.com:dockstoretestuser2/quayandgithubalternate.git", "--git-reference", "master", "--toolname", "alternate",
             "--cwl-path", "/testDir/Dockstore.cwl", "--wdl-path", "/testDir/Dockstore.wdl", "--dockerfile-path", "/testDir/Dockerfile",
-            "--script" });
+            SCRIPT_FLAG });
 
         Client.main(
-            new String[] { "--config", ResourceHelpers.resourceFilePath("config_file2.txt"), "tool", "version_tag", "add", "--entry",
+            new String[] { CONFIG, ResourceHelpers.resourceFilePath("config_file2.txt"), TOOL, VERSION_TAG, ADD, ENTRY,
                 "quay.io/dockstoretestuser2/quayandgithub/alternate", "--name", "masterTest", "--image-id",
-                "4728f8f5ce1709ec8b8a5282e274e63de3c67b95f03a519191e6ea675c5d34e8", "--git-reference", "master", "--script" });
+                "4728f8f5ce1709ec8b8a5282e274e63de3c67b95f03a519191e6ea675c5d34e8", "--git-reference", "master", SCRIPT_FLAG });
 
         Client.main(
-            new String[] { "--config", ResourceHelpers.resourceFilePath("config_file2.txt"), "tool", "version_tag", "remove", "--entry",
-                "quay.io/dockstoretestuser2/quayandgithub/alternate", "--name", "masterTest", "--script" });
+            new String[] { CONFIG, ResourceHelpers.resourceFilePath("config_file2.txt"), TOOL, VERSION_TAG, "remove", ENTRY,
+                "quay.io/dockstoretestuser2/quayandgithub/alternate", "--name", "masterTest", SCRIPT_FLAG });
 
         final long count = testingPostgres.runSelectStatement("select count(*) from tag where name = 'masterTest'", long.class);
-        assertEquals("there should be no tags with the name masterTest", 0, count);
+        assertEquals(0, count, "there should be no tags with the name masterTest");
     }
 
     /**
      * Check that refreshing an incorrect individual container won't work
      */
     @Test
-    public void testRefreshIncorrectContainer() {
-        systemExit.expectSystemExitWithStatus(Client.API_ERROR);
-        Client.main(new String[] { "--config", ResourceHelpers.resourceFilePath("config_file2.txt"), "tool", "refresh", "--entry",
-            "quay.io/dockstoretestuser2/unknowncontainer", "--script" });
+    void testRefreshIncorrectContainer() throws Exception {
+        int exitCode = catchSystemExit(() -> Client.main(
+                new String[] { CONFIG, ResourceHelpers.resourceFilePath("config_file2.txt"), TOOL, REFRESH, ENTRY,
+                        "quay.io/dockstoretestuser2/unknowncontainer", SCRIPT_FLAG }));
+        assertEquals(Client.API_ERROR, exitCode);
     }
 
     /**
      * Tests that tool2JSON works for entries on Dockstore
      */
     @Test
-    public void testTool2JSONWDL() {
-        Client.main(new String[] { "--config", ResourceHelpers.resourceFilePath("config_file2.txt"), "tool", "publish", "--entry",
+    void testTool2JSONWDL() {
+        Client.main(new String[] { CONFIG, ResourceHelpers.resourceFilePath("config_file2.txt"), TOOL, PUBLISH, ENTRY,
             "quay.io/dockstoretestuser2/quayandgithubwdl" });
         // need to refresh to overrride bad data in ye-olde seed DB that trips up improved validation now
-        Client.main(new String[] { "--config", ResourceHelpers.resourceFilePath("config_file2.txt"), "tool", "refresh", "--entry",
-            "quay.io/dockstoretestuser2/quayandgithubwdl", "--script" });
+        Client.main(new String[] { CONFIG, ResourceHelpers.resourceFilePath("config_file2.txt"), TOOL, REFRESH, ENTRY,
+            "quay.io/dockstoretestuser2/quayandgithubwdl", SCRIPT_FLAG });
         // need to publish before converting
         Client.main(
-            new String[] { "--config", ResourceHelpers.resourceFilePath("config_file2.txt"), "tool", "convert", "entry2json", "--entry",
-                "quay.io/dockstoretestuser2/quayandgithubwdl", "--descriptor", "wdl", "--script" });
-        Assert.assertTrue(systemOutRule.getLog().contains("\"test.hello.name\": \"String\""));
+            new String[] { CONFIG, ResourceHelpers.resourceFilePath("config_file2.txt"), TOOL, CONVERT, ENTRY_2_JSON, ENTRY,
+                "quay.io/dockstoretestuser2/quayandgithubwdl", "--descriptor", WDL.toString(), SCRIPT_FLAG });
+        assertTrue(systemOutRule.getText().contains("\"test.hello.name\": \"String\""));
     }
 
     @Test
-    public void registerUnregisterAndCopy() {
-        Client.main(new String[] { "--config", ResourceHelpers.resourceFilePath("config_file2.txt"), "tool", "publish", "--entry",
+    void registerUnregisterAndCopy() {
+        Client.main(new String[] { CONFIG, ResourceHelpers.resourceFilePath("config_file2.txt"), TOOL, PUBLISH, ENTRY,
             "quay.io/dockstoretestuser2/quayandgithubwdl" });
 
         boolean published = testingPostgres.runSelectStatement(
             "select ispublished from tool where registry = '" + Registry.QUAY_IO.getDockerPath()
                 + "' and namespace = 'dockstoretestuser2' and name = 'quayandgithubwdl';", boolean.class);
-        assertTrue("tool not published", published);
+        assertTrue(published, "tool not published");
 
-        Client.main(new String[] { "--config", ResourceHelpers.resourceFilePath("config_file2.txt"), "tool", "publish", "--entry",
+        Client.main(new String[] { CONFIG, ResourceHelpers.resourceFilePath("config_file2.txt"), TOOL, PUBLISH, ENTRY,
             "quay.io/dockstoretestuser2/quayandgithubwdl", "--entryname", "foo" });
 
         long count = testingPostgres.runSelectStatement("select count(*) from tool where registry = '" + Registry.QUAY_IO.getDockerPath()
             + "' and namespace = 'dockstoretestuser2' and name = 'quayandgithubwdl';", long.class);
-        assertEquals("should be two after republishing", 2, count);
+        assertEquals(2, count, "should be two after republishing");
 
         Client.main(
-            new String[] { "--config", ResourceHelpers.resourceFilePath("config_file2.txt"), "tool", "publish", "--unpub", "--entry",
+            new String[] { CONFIG, ResourceHelpers.resourceFilePath("config_file2.txt"), TOOL, PUBLISH, "--unpub", ENTRY,
                 "quay.io/dockstoretestuser2/quayandgithubwdl" });
 
         published = testingPostgres.runSelectStatement("select ispublished from tool where registry = '" + Registry.QUAY_IO.getDockerPath()
@@ -356,28 +375,28 @@ public class GeneralIT extends BaseIT {
      * Tests that WDL2JSON works for local file
      */
     @Test
-    public void testWDL2JSON() {
+    void testWDL2JSON() {
         File sourceFile = new File(ResourceHelpers.resourceFilePath("wdl.wdl"));
-        Client.main(new String[] { "--config", ResourceHelpers.resourceFilePath("config_file2.txt"), "tool", "convert", "wdl2json", "--wdl",
-            sourceFile.getAbsolutePath(), "--script" });
+        Client.main(new String[] { CONFIG, ResourceHelpers.resourceFilePath("config_file2.txt"), TOOL, CONVERT, WDL_2_JSON, "--wdl",
+            sourceFile.getAbsolutePath(), SCRIPT_FLAG });
         // TODO: Test that output is the expected WDL file
     }
 
     @Test
     @Category(ToilCompatibleTest.class)
-    public void testCWL2JSON() {
+    void testCWL2JSON() {
         File sourceFile = new File(ResourceHelpers.resourceFilePath("dockstore-tool-bamstats.cwl"));
-        Client.main(new String[] { "--config", ResourceHelpers.resourceFilePath("config_file2.txt"), "tool", "convert", "cwl2json", "--cwl",
-            sourceFile.getAbsolutePath(), "--script" });
+        Client.main(new String[] { CONFIG, ResourceHelpers.resourceFilePath("config_file2.txt"), TOOL, CONVERT, CWL_2_JSON, "--cwl",
+            sourceFile.getAbsolutePath(), SCRIPT_FLAG });
         // TODO: Test that output is the expected JSON file
     }
 
     @Test
     @Category(ToilCompatibleTest.class)
-    public void testCWL2YAML() {
+    void testCWL2YAML() {
         File sourceFile = new File(ResourceHelpers.resourceFilePath("dockstore-tool-bamstats.cwl"));
-        Client.main(new String[] { "--config", ResourceHelpers.resourceFilePath("config_file2.txt"), "tool", "convert", "cwl2yaml", "--cwl",
-            sourceFile.getAbsolutePath(), "--script" });
+        Client.main(new String[] { CONFIG, ResourceHelpers.resourceFilePath("config_file2.txt"), TOOL, CONVERT, CWL_2_YAML, "--cwl",
+            sourceFile.getAbsolutePath(), SCRIPT_FLAG });
         // TODO: Test that output is the expected yaml file
     }
 
@@ -385,84 +404,86 @@ public class GeneralIT extends BaseIT {
      * Check that a user can't refresh another users container
      */
     @Test
-    public void testRefreshOtherUsersContainer() {
-        systemExit.expectSystemExitWithStatus(Client.API_ERROR);
-        Client.main(new String[] { "--config", ResourceHelpers.resourceFilePath("config_file2.txt"), "tool", "refresh", "--entry",
-            "quay.io/test_org/test1", "--script" });
+    void testRefreshOtherUsersContainer() throws Exception {
+        int exitCode = catchSystemExit(() -> Client.main(
+                new String[] { CONFIG, ResourceHelpers.resourceFilePath("config_file2.txt"), TOOL, REFRESH, ENTRY,
+                        "quay.io/test_org/test1", SCRIPT_FLAG }));
+        assertEquals(Client.API_ERROR, exitCode);
     }
 
     /**
      * Tests that WDL and CWL files can be grabbed from the command line
      */
     @Test
-    public void testGetWdlAndCwl() {
-        Client.main(new String[] { "--config", ResourceHelpers.resourceFilePath("config_file2.txt"), "tool", "publish", "--entry",
+    void testGetWdlAndCwl() {
+        Client.main(new String[] { CONFIG, ResourceHelpers.resourceFilePath("config_file2.txt"), TOOL, PUBLISH, ENTRY,
             "quay.io/dockstoretestuser2/quayandgithubwdl" });
-        Client.main(new String[] { "--config", ResourceHelpers.resourceFilePath("config_file2.txt"), "tool", "wdl", "--entry",
-            "quay.io/dockstoretestuser2/quayandgithubwdl", "--script" });
-        Client.main(new String[] { "--config", ResourceHelpers.resourceFilePath("config_file2.txt"), "tool", "publish", "--entry",
+        Client.main(new String[] { CONFIG, ResourceHelpers.resourceFilePath("config_file2.txt"), TOOL, WDL.toString(), ENTRY,
+            "quay.io/dockstoretestuser2/quayandgithubwdl", SCRIPT_FLAG });
+        Client.main(new String[] { CONFIG, ResourceHelpers.resourceFilePath("config_file2.txt"), TOOL, PUBLISH, ENTRY,
             "quay.io/dockstoretestuser2/quayandgithub" });
-        Client.main(new String[] { "--config", ResourceHelpers.resourceFilePath("config_file2.txt"), "tool", "cwl", "--entry",
-            "quay.io/dockstoretestuser2/quayandgithub", "--script" });
+        Client.main(new String[] { CONFIG, ResourceHelpers.resourceFilePath("config_file2.txt"), TOOL, CWL.toString(), ENTRY,
+            "quay.io/dockstoretestuser2/quayandgithub", SCRIPT_FLAG });
     }
 
     /**
      * Tests that attempting to get a WDL file when none exists won't work
      */
     @Test
-    public void testGetWdlFailure() {
-        systemExit.expectSystemExitWithStatus(Client.API_ERROR);
-        Client.main(new String[] { "--config", ResourceHelpers.resourceFilePath("config_file2.txt"), "tool", "wdl", "--entry",
-            "quay.io/dockstoretestuser2/quayandgithub", "--script" });
+    void testGetWdlFailure() throws Exception {
+        int exitCode = catchSystemExit(() -> Client.main(
+                new String[] { CONFIG, ResourceHelpers.resourceFilePath("config_file2.txt"), TOOL, WDL.toString(), ENTRY,
+                        "quay.io/dockstoretestuser2/quayandgithub", SCRIPT_FLAG }));
+        assertEquals(Client.API_ERROR, exitCode);
     }
 
     /**
      * Tests that a user can only add Quay containers that they own directly or through an organization
      */
     @Test
-    public void testUserPrivilege() {
+    void testUserPrivilege() throws Exception {
         // Repo user has access to
-        Client.main(new String[] { "--config", ResourceHelpers.resourceFilePath("config_file2.txt"), "tool", "manual_publish", "--registry",
+        Client.main(new String[] { CONFIG, ResourceHelpers.resourceFilePath("config_file2.txt"), TOOL, MANUAL_PUBLISH, "--registry",
             Registry.QUAY_IO.name(), "--namespace", "dockstoretestuser2", "--name", "quayandgithub", "--git-url",
             "git@github.com:dockstoretestuser2/quayandgithubalternate.git", "--git-reference", "master", "--toolname", "testTool",
-            "--cwl-path", "/testDir/Dockstore.cwl", "--dockerfile-path", "/testDir/Dockerfile", "--script" });
+            "--cwl-path", "/testDir/Dockstore.cwl", "--dockerfile-path", "/testDir/Dockerfile", SCRIPT_FLAG });
         final long count = testingPostgres.runSelectStatement("select count(*) from tool where registry = '" + Registry.QUAY_IO.getDockerPath()
             + "' and namespace = 'dockstoretestuser2' and name = 'quayandgithub' and toolname = 'testTool'", long.class);
-        assertEquals("the container should exist", 1, count);
+        assertEquals(1, count, "the container should exist");
 
         // Repo user is part of org
-        Client.main(new String[] { "--config", ResourceHelpers.resourceFilePath("config_file2.txt"), "tool", "manual_publish", "--registry",
+        Client.main(new String[] { CONFIG, ResourceHelpers.resourceFilePath("config_file2.txt"), TOOL, MANUAL_PUBLISH, "--registry",
             Registry.QUAY_IO.name(), "--namespace", "dockstore2", "--name", "testrepo2", "--git-url",
             "git@github.com:dockstoretestuser2/quayandgithub.git", "--git-reference", "master", "--toolname", "testOrg", "--cwl-path",
-            "/Dockstore.cwl", "--dockerfile-path", "/Dockerfile", "--script" });
+            "/Dockstore.cwl", "--dockerfile-path", "/Dockerfile", SCRIPT_FLAG });
         final long count2 = testingPostgres.runSelectStatement("select count(*) from tool where registry = '" + Registry.QUAY_IO.getDockerPath()
             + "' and namespace = 'dockstore2' and name = 'testrepo2' and toolname = 'testOrg'", long.class);
-        assertEquals("the container should exist", 1, count2);
+        assertEquals(1, count2, "the container should exist");
 
         // Repo user doesn't own
-        systemExit.expectSystemExitWithStatus(Client.API_ERROR);
-        Client.main(new String[] { "--config", ResourceHelpers.resourceFilePath("config_file2.txt"), "tool", "manual_publish", "--registry",
-            Registry.QUAY_IO.name(), "--namespace", "dockstoretestuser", "--name", "testrepo", "--git-url",
-            "git@github.com:dockstoretestuser/quayandgithub.git", "--git-reference", "master", "--toolname", "testTool", "--cwl-path",
-            "/Dockstore.cwl", "--dockerfile-path", "/Dockerfile", "--script" });
+        int exitCode = catchSystemExit(() -> Client.main(new String[] { CONFIG, ResourceHelpers.resourceFilePath("config_file2.txt"), TOOL, MANUAL_PUBLISH, "--registry",
+                Registry.QUAY_IO.name(), "--namespace", "dockstoretestuser", "--name", "testrepo", "--git-url",
+                "git@github.com:dockstoretestuser/quayandgithub.git", "--git-reference", "master", "--toolname", "testTool", "--cwl-path",
+                "/Dockstore.cwl", "--dockerfile-path", "/Dockerfile", SCRIPT_FLAG }));
+        assertEquals(Client.API_ERROR, exitCode);
     }
 
     /**
      * This tests that zip file can be downloaded or not based on published state and auth.
      */
     @Test
-    public void downloadZipFileTestAuth() throws IOException {
+    void downloadZipFileTestAuth() throws IOException {
         final ApiClient ownerWebClient = getWebClient(USER_2_USERNAME, testingPostgres);
         ContainersApi ownerContainersApi = new ContainersApi(ownerWebClient);
 
-        final ApiClient anonWebClient = CommonTestUtilities.getWebClient(false, null, testingPostgres);
+        final ApiClient anonWebClient = CLICommonTestUtilities.getWebClient(false, null, testingPostgres);
         ContainersApi anonContainersApi = new ContainersApi(anonWebClient);
 
-        final ApiClient otherUserWebClient = CommonTestUtilities.getWebClient(true, OTHER_USERNAME, testingPostgres);
+        final ApiClient otherUserWebClient = CLICommonTestUtilities.getWebClient(true, OTHER_USERNAME, testingPostgres);
         ContainersApi otherUserContainersApi = new ContainersApi(otherUserWebClient);
 
         // Register and refresh tool
-        DockstoreTool tool = ownerContainersApi.registerManual(CommonTestUtilities.getContainer());
+        DockstoreTool tool = ownerContainersApi.registerManual(CLICommonTestUtilities.getContainer());
         DockstoreTool refresh = ownerContainersApi.refresh(tool.getId());
         Long toolId = refresh.getId();
         Tag tag = refresh.getWorkflowVersions().get(0);
@@ -478,7 +499,7 @@ public class GeneralIT extends BaseIT {
         } catch (ApiException ex) {
             success = false;
         } finally {
-            assertFalse("User does not have access to tool.", success);
+            assertFalse(success, "User does not have access to tool.");
         }
         // Other user: Should fail
         success = true;
@@ -487,7 +508,7 @@ public class GeneralIT extends BaseIT {
         } catch (ApiException ex) {
             success = false;
         } finally {
-            assertFalse("User does not have access to tool.", success);
+            assertFalse(success, "User does not have access to tool.");
         }
 
         // Publish
@@ -505,21 +526,21 @@ public class GeneralIT extends BaseIT {
         // test that these zips can be downloaded via CLI
 
         // download zip via CLI
-        Client.main(new String[] { "--config", ResourceHelpers.resourceFilePath("config_file2.txt"), "tool", "download", "--entry",
-            refresh.getToolPath() + ":" + tag.getName(), "--zip", "--script" });
+        Client.main(new String[] { CONFIG, ResourceHelpers.resourceFilePath("config_file2.txt"), TOOL, DOWNLOAD, ENTRY,
+            refresh.getToolPath() + ":" + tag.getName(), "--zip", SCRIPT_FLAG });
         File downloadedZip = new File(new ToolClient(null, false).zipFilename(refresh));
         // record entries
-        List<String> collect = new ZipFile(downloadedZip).stream().map(ZipEntry::getName).collect(Collectors.toList());
-        assert (downloadedZip.exists());
-        assert (downloadedZip.delete());
+        List<String> collect = new ZipFile(downloadedZip).stream().map(ZipEntry::getName).toList();
+        assertTrue(downloadedZip.exists());
+        assertTrue(downloadedZip.delete());
 
         // download and unzip via CLI while at it
-        Client.main(new String[] { "--config", ResourceHelpers.resourceFilePath("config_file2.txt"), "tool", "download", "--entry",
-            refresh.getToolPath() + ":" + tag.getName(), "--script" });
+        Client.main(new String[] { CONFIG, ResourceHelpers.resourceFilePath("config_file2.txt"), TOOL, DOWNLOAD, ENTRY,
+            refresh.getToolPath() + ":" + tag.getName(), SCRIPT_FLAG });
         collect.forEach(entry -> {
             File innerFile = new File(System.getProperty("user.dir"), entry);
-            assert (innerFile.exists());
-            assert (innerFile.delete());
+            assertTrue(innerFile.exists());
+            assertTrue(innerFile.delete());
         });
     }
 
