@@ -14,7 +14,6 @@ import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
-import java.util.stream.Collectors;
 
 import com.google.gson.Gson;
 import io.dockstore.common.DescriptorLanguage;
@@ -23,12 +22,12 @@ import io.dockstore.common.Utilities;
 import io.dockstore.common.WdlBridge;
 import io.github.collaboratory.cwl.CWLClient;
 import org.apache.commons.configuration2.INIConfiguration;
-import org.apache.commons.io.FileUtils;
 import org.apache.commons.lang3.tuple.ImmutablePair;
 import wdl.draft3.parser.WdlParser;
 
 import static io.dockstore.client.cli.ArgumentUtility.errorMessage;
 import static io.dockstore.client.cli.Client.IO_ERROR;
+import static io.dockstore.common.DescriptorLanguage.CWL;
 
 /**
  * This is a base class for clients that launch workflows with Cromwell
@@ -36,7 +35,7 @@ import static io.dockstore.client.cli.Client.IO_ERROR;
 public class CromwellLauncher extends BaseLauncher {
     // If the Cromwell version is changed be sure to update the table
     // in the documentation at advanced-topics/advanced-features.rst:317
-    protected static final String DEFAULT_CROMWELL_VERSION = "77";
+    protected static final String DEFAULT_CROMWELL_VERSION = "84";
     protected Map<String, List<FileProvisioning.FileInfo>> outputMap;
     protected List<String>  cromwellExtraParameters;
     protected List<String>  cromwellVmOptions;
@@ -79,11 +78,8 @@ public class CromwellLauncher extends BaseLauncher {
         String cromwellTarget = libraryLocation + cromwellFileName;
         File cromwellTargetFile = new File(cromwellTarget);
         if (!cromwellTargetFile.exists()) {
-            try {
-                FileUtils.copyURLToFile(cromwellURL, cromwellTargetFile);
-            } catch (IOException e) {
-                throw new RuntimeException("Could not download " + launcherName + " location", e);
-            }
+            final int pluginDownloadAttempts = 5;
+            FileProvisioning.retryWrapper(null, cromwellURL.toString(), cromwellTargetFile.toPath(), pluginDownloadAttempts, true, 1);
         }
         executionFile = cromwellTargetFile;
     }
@@ -96,7 +92,7 @@ public class CromwellLauncher extends BaseLauncher {
         if (cromwellVmOptions.size() > 0) {
             List<String> cromwellVmOptionsParsed = cromwellVmOptions.stream().map(string -> string.split(","))
                     .flatMap(Arrays::stream).map(String::trim)
-                    .collect(Collectors.toList());
+                    .toList();
             arguments.addAll(cromwellVmOptionsParsed);
         }
 
@@ -112,14 +108,14 @@ public class CromwellLauncher extends BaseLauncher {
         // There are currently issues with Cromwell 44 automatic type detection.  If it's CWL, the flag must be added.
         // https://github.com/broadinstitute/cromwell/issues/5085
         // Remove these 3 lines once the type can be detected again.
-        if (languageType == DescriptorLanguage.CWL) {
-            Collections.addAll(arguments, "--type", "cwl");
+        if (languageType == CWL) {
+            Collections.addAll(arguments, "--type", CWL.toString());
         }
 
         if (cromwellExtraParameters.size() > 0) {
             List<String> cromwellExtraParametersParsed = cromwellExtraParameters.stream().map(string -> string.split(","))
                     .flatMap(Arrays::stream).map(String::trim)
-                    .collect(Collectors.toList());
+                    .toList();
             arguments.addAll(cromwellExtraParametersParsed);
         }
 
@@ -133,7 +129,7 @@ public class CromwellLauncher extends BaseLauncher {
     public void provisionOutputFiles(String stdout, String stderr, String wdlOutputTarget) {
         if (Objects.equals(languageType, DescriptorLanguage.WDL)) {
             handleWDLOutputProvisioning(stdout, stderr, wdlOutputTarget);
-        } else if (Objects.equals(languageType, DescriptorLanguage.CWL)) {
+        } else if (Objects.equals(languageType, CWL)) {
             handleCWLOutputProvisioning(stdout, stderr);
         }
     }
